# VIVACOM-TEST

./: CMakeLists.txt  README-bg.md  README.md  build.bat  build.sh  config.conf  config.conf.example  openapi.json  openapi.yaml
database/: SCHEMA.md
database/mssql/: 01_create_tables.sql
database/oracle/: 01_create_tables.sql
database/postgresql/: 01_create_tables.sql
database/sqlite/: 01_create_tables.sql
docs/: build-deploy.md
jobs/: release-expired-reservations.php
libs/sqlite/: CMakeLists.txt
src/: ip_validation.cpp  ip_validation.hpp  main.cpp  storage.hpp  storage_ado.cpp  storage_ado.hpp  storage_factory.cpp  storage_odbc.cpp  storage_odbc.hpp  storage_postgresql.cpp  storage_postgresql.hpp  storage_sqlite.cpp  storage_sqlite.hpp
tests/php/: api-helper.php  config.php  run-all.php  test-assign-ip.php  test-get-serviceId.php  test-ip-pool.php  test-reserve-ip.php  test-serviceId-change.php  test-terminate-ip.php
web/: config.php  index.php  test-api.php
web/ip_inv/: .htaccess  README.md  config.php  db.php  index.php  ip_validation.php
